# TrustTheChatBot

./: .gitignore  .gitmodules  main.py  pyproject.toml  readme.md  requirements.txt
TrustTheChatBot/: bbo.py  code_filters.py  envs.py  high_level_funcs.py  manipulation.py  models.py  utils.py
TrustTheChatBot/bbo/: bbo.py  highlvl_env.py  komo_env.py  komo_simple.py
TrustTheChatBot/example_llm_outputs/beer/: 1.txt
TrustTheChatBot/example_llm_outputs/bridge/: 1.txt
TrustTheChatBot/example_llm_outputs/romani/: 1.txt
TrustTheChatBot/io/: high_level_funcs.py  high_level_funcs_simple_rot.py
TrustTheChatBot/prompts/io/highlvl/: tutorial.txt
TrustTheChatBot/prompts/io/highlvl_simple_rot/: tutorial.txt
TrustTheChatBot/prompts/io/komo/: dummy_komo.txt  dummy_response.txt  komo_setup.txt  problem_definition.txt  solve_komo.txt  tutorial.txt
TrustTheChatBot/prompts/io/manip/: problem_definition.txt  tutorial.txt
TrustTheChatBot/prompts/tasks/beer/: scene_description.txt  task_description.txt
TrustTheChatBot/prompts/tasks/bridge/: scene_description.txt  task_description.txt
TrustTheChatBot/tasks/: configurations.py  const_functions.py
results/: beer_hlvl.txt  bridge_hlvl.txt  stack_komo.txt  stack_manip.txt
tests/: bbo_test.py  beer_test.py  chatgpt_out.txt  chatgpt_test.py  code_filters_test.py  config_viewer.py  env_test.py  highlvl_env_test.py  initial_prompt_test.py  models_test.py  z.log.global
